# rusty_pipe_front

./: .gitignore  .travis.yml  Cargo.toml  README.md  bootstrap.js  build_and_fixcordova.sh  index.html  netlify.sh  package-lock.json  package.json  player.ts  tsconfig.json  vercel.json  wasm-builder.js  webpack.config.js
api/cors/: [cors].js  [uri].js
cordovawrap/: build.json  config.xml  index-fixer.js  package-fixer.js
cordovawrap/fixes/: index.html
crate/: Cargo.toml
crate/graphql/: suggestion_query.graphql
crate/src/: app.rs  downloader.rs  lib.rs  route_comp.rs  search_result.rs  trending.rs  video.rs  video_player.rs
crate/src/graphql/: mod.rs  suggestion_query.rs
graphql/: rustypipe.json
prebuild/: app.af35efec.js  app.af35efec.js.map  bulma.min.a002f45f.css  bulma.min.a002f45f.css.map  bulma.min.a002f45f.js  bulma.min.a002f45f.js.map  font_awesome.ddbe129f.js  font_awesome.ddbe129f.js.map  index.html  package.json  rusty_pipe_front.d.ts  rusty_pipe_front.js  rusty_pipe_front_bg.d.ts  rusty_pipe_front_bg.wasm
src/: app.rs  downloader.rs  lib.rs  route_comp.rs  search_result.rs  video_player.rs
static/: historyevent.js  index.html
