[package]
authors = ["Deep Gaurav"]
categories = ["wasm"]
description = "RustyPipe"
license = "MIT"
name = "rusty_pipe_front"
readme = "./README.md"
# repository = "https://github.com/spielrs/yew-parcel-template.git"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cfg-if = "0.1"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
serde_derive = "1.0"
dotenv = "0.15"
failure = "0.1"
yew = { version="0.16", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
yew-router = { version = "0.13", features = ["web_sys"]}
web-sys = "0.3"
graphql_client = "0.9.0"
log = "0.4.6"
wasm-logger = "0.2.0"
http = "0.2.1"
anyhow = "1.0"